--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ build/Release
 node_modules/
 jspm_packages/
 
+package-lock.json
+
 # TypeScript v1 declaration files
 typings/
 
@@ -102,3 +104,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+.idea
